--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ projects:
   exclude:
     archived: false
     forks: true
-    projects:
+    projects: begood-chenhong.github.io
     # - repo-name
 
 social_media:
